--- a/src/LangProwess.Web/Shared/MainLayout.razor
+++ b/src/LangProwess.Web/Shared/MainLayout.razor
@@ -1,4 +1,8 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
+
+<MudThemeProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
 
 <main>
 	<article>
